client/src/layout/NavigationMenu/NavMenu.module.scss
@import "/src/styles/base";

// Desktop Styles //
.navRoot {
  position: relative;
  background-color: $color-surface;
  padding: $spacing-6 0;

  @media (max-width: $screen-lg){
    display: none;
  }
}

.navList {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: $spacing-16;
}

.navItemHead {
  text-transform: uppercase;
  letter-spacing: 1px;
  font-family: $font-serif;
  font-size: $font-lg;
}

.navLogo {
  display: block;
  padding: 0 $spacing-3;
  text-align: center;
  font-weight: 300;

  @media (max-width: 350px) {
    display: none;
  }

  .logoName {
    font-size: $font-2xl;
    letter-spacing: 8px;
  }

  .logoDescription {
    font-size: $font-sm;
    letter-spacing: 2px;
  }
}

.navDropdown {
  position: absolute;
  top: calc(100% + $spacing-6);
  overflow: hidden;
  padding: $spacing-5 $spacing-16 $spacing-5 $spacing-8;
  background-color: #fff;
  transform-origin: top;
  z-index: 100;

  &[data-state="open"] {
    animation: scaleIn .35s ease-out;
  }

  &[data-state="closed"] {
    animation: scaleOut .3s ease-in-out;
  }

  ul > li {
    padding: $spacing-3 0;
  }
}

.cart {
  position: absolute;
  right: $spacing-12;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;

  @media (max-width: $screen-lg) {
    position: relative;
    transform: none;
    right: 0;
  }

  & > .cartQuantity {
    position: absolute;
    top: -15px;
    right: -15px;
    width: 25px;
    height: 25px;
    text-align: center;
    font-family: $font-serif;
    background-color: $color-primary-dark;
    color: #fff;
    border-radius: $border-rounded-full;
  }

  & > .cartQuantityHidden {
    display: none;
  }

  & > .cartIcon {
    width: 30px;
    height: 30px;
    fill: transparent;
    stroke: $color-text;
    stroke-width: 1.25;
  }
}

// Mobile Styles //
.mobileNavMenu {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: $spacing-3 $spacing-6;
  background-color: $color-surface;

  @media (min-width: $screen-lg) {
    display: none;
  }
}

.menuIcon {
  stroke: $color-primary;
  fill: $color-primary;
  stroke-width: 2px;
  height: 24px;
  width: 24px;
  cursor: pointer;

  &.menuIconClose {
    height: 26px;
    width: 26px;
    fill: transparent;
  }
}

.mobileNavDropdown {
  position: absolute;
  top: 100%;
  right: 0;
  left: 0;
  background-color: #fff;
  z-index: 1000;
  transform-origin: top;
  transform: scaleY(0);
  transition: all 0.3s ease-in-out;

  &.open {
    transform: scaleY(1);
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
  }

  &.closed {
    transform: scaleY(0);
  }
}

.mobileList {
  padding: $spacing-6 $spacing-12;
}

.mobileListItem {
  position: relative;
  padding: $spacing-1 0;
  font-size: $font-sm;
  cursor: pointer;

  & svg {
    width: 1rem;
    height: 1rem;
  }
}

.mobileListNavItemHeading {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.mobileNavItemHeader {
  display: flex;
  text-transform: uppercase;
  letter-spacing: 1px;
}

.chevron {
  transition: all 0.3s ease-out;
}

.chevronOpen {
  transform: rotate(90deg);
}

.mobileNavSubList {
  background-color: #fff;
  z-index: 1001;
  transform-origin: top;
  transition: max-height 0.3s ease-out, transform 0.25s ease-out;
  max-height: 0;
  transform: scaleY(0);

  &.open {
    max-height: 200px;
    transform: scaleY(1);
  }

  & > li {
    margin-top: $spacing-1;
    margin-left: $spacing-2;

    & > .fontLg {
      font-size: $font-base;
    }

    &:first-child {
      padding-top: $spacing-2;
    }

    &:last-child {
      margin-bottom: $spacing-3;
    }
  }
}

@keyframes scaleIn {
  from {
    opacity: 0;
    transform: rotateX(-30deg) scaleY(0.5);
  }
  to {
    opacity: 1;
    transform: rotateX(0deg) scaleY(1);
  }
}

@keyframes scaleOut {
  from {
    opacity: 1;
    transform: rotateX(0deg) scaleY(1);
  }
  to {
    opacity: 0;
    transform: rotateX(-10deg) scaleY(0.95);
  }
}

